WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284805
REGRESSION(
287835@main
): [CoordinatedGraphics] Wrong layer is scrolled sometimes
https://bugs.webkit.org/show_bug.cgi?id=284805
Summary
REGRESSION(287835@main): [CoordinatedGraphics] Wrong layer is scrolled sometimes
Carlos Garcia Campos
Reported
2024-12-17 02:05:45 PST
I made a mistake in
287835@main
in the point transformation when collecting scrolling layers for a given point, causing the wrong layer to be returned.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-12-17 02:09:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38064
EWS
Comment 2
2024-12-17 04:32:05 PST
Committed
287935@main
(66b85784bb16): <
https://commits.webkit.org/287935@main
> Reviewed commits have been landed. Closing PR #38064 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-17 04:33:14 PST
<
rdar://problem/141610564
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug