REGRESSION(287835@main): [CoordinatedGraphics] Wrong layer is scrolled sometimes https://bugs.webkit.org/show_bug.cgi?id=284805

Reviewed by Alejandro G. Castro.

I made a mistake in 287835@main in the point transformation when
collecting scrolling layers for a given point, causing the wrong layer
to be returned. We should use the parent bounds origin instead of the
child one.

* Source/WebCore/page/scrolling/coordinated/ScrollingTreeCoordinated.cpp:
(WebCore::collectDescendantLayersAtPoint):

Canonical link: https://commits.webkit.org/287935@main